--- a/.env.example
+++ b/.env.example
@@ -1,36 +1,31 @@
 APP_NAME="Fans"
 APP_ENV=local
-APP_KEY=
+APP_KEY=fans2
 APP_DEBUG=true
-APP_LOG_LEVEL=debug
+APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=pwf
-DB_USERNAME=root
-DB_PASSWORD=null
+LOG_CHANNEL=stack
 
-BROADCAST_DRIVER=log
+DB_CONNECTION=mysql
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=fans
+DB_USERNAME=fans
+DB_PASSWORD=fans
+
 CACHE_DRIVER=file
+
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+
 QUEUE_DRIVER=sync
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-
-PUSHER_APP_CLUSTER=mt1
+DOCKER_CONTAINER_USER=fans
+DOCKER_CONTAINER_GROUP=fans
+DOCKER_CONTAINER_PUID=1000
+DOCKER_CONTAINER_PGID=1000
+DOCKER_HOST_IP=10.0.75.1
+DOCKER_WORKSPACE_SSH_PORT=2222
+DOCKER_PHP_INSTALL_XDEBUG=true
+DOCKER_HTTP_PORT=8090
